Color pickers don't close properly when moving the mouse away #29072

Closed
opened 2011-10-28 16:06:58 +02:00 by mindrones · 7 comments

%%%Attaching a picture to explain this.

Say that the color picker is in the area A and it overlaps with another area (B).

If you move the mouse out of the color picker in area A, then the clor picker closes properly.
If you move the mouse out of the color picker in area B, then the color picker stays open.

You have to press ESC to close the color picker or go back in area A and exit from the color picker via area A.
%%%

%%%Attaching a picture to explain this. Say that the color picker is in the area A and it overlaps with another area (B). If you move the mouse out of the color picker in area A, then the clor picker closes properly. If you move the mouse out of the color picker in area B, then the color picker stays open. You have to press ESC to close the color picker or go back in area A and exit from the color picker via area A. %%%
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

%%%Attaching another case of menu that don't close moving away the mouse: the datablock selector (the one you use to change a mesh to an object for example).
%%%

%%%Attaching another case of menu that don't close moving away the mouse: the datablock selector (the one you use to change a mesh to an object for example). %%%

%%%The rules here are a bit arbitrary, some menus go away when moving the mouse outside of them, some only when you move the mouse over another button (color picker), and some never close on mouse move (datablock selector). Could be made more consistent.%%%

%%%The rules here are a bit arbitrary, some menus go away when moving the mouse outside of them, some only when you move the mouse over another button (color picker), and some never close on mouse move (datablock selector). Could be made more consistent.%%%

%%%Brecht, can you look into unification of this things? Should be easy for you. Or assign this report to somebody else familiar with UI code. Thanks.%%%

%%%Brecht, can you look into unification of this things? Should be easy for you. Or assign this report to somebody else familiar with UI code. Thanks.%%%

%%%fixed r50483.%%%

%%%fixed r50483.%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Member

%%%Note for record: fix is in r52015.
The previous fix just closed every menu when mouse was a few pixels out... not meant to.%%%

%%%Note for record: fix is in r52015. The previous fix just closed every menu when mouse was a few pixels out... not meant to.%%%
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#29072
No description provided.