fix [#29072] Color pickers don't close properly when moving the mouse away

instead of checking if the mouse is over another button to exit the popup.
Just check if the mouse is outside the rect-union between the button and the popup.